--- a/app/index.html
+++ b/app/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>React [RU] Tutorial</title>
+    <title>React ES6 boilerplate</title>
 </head>
 <body>
     <div id="app"></div>
